# Smash-Engine

./: .gitignore  Readme.md  SmashEngine.sln
Libraries/Include/GLFW/: glfw3.h
Libraries/Include/tinyxml2/: tinyxml2.cpp
Libraries/Libs/: SOIL.lib  assimp.lib  assimpd.lib  glew32d.lib  glew32sd.lib  zlibstatic.lib  zlibstaticd.lib
Libraries/Libs/tinyxml2/Win32-Debug-Lib/: tinyxml2.lib
Libraries/Libs/tinyxml2/Win32-Release-Lib/: tinyxml2.lib
SmashEngine/: Body.cpp  Body.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraSignal.h  CameraSystem.cpp  CameraSystem.h  Collider.cpp  Collider.h  CollisionSignal.cpp  CollisionSignal.h  Component.h  ComponentCreator.h  ComponentType.h  Cube.cpp  Cube.h  DebugSignal.h  DrawSignal.cpp  DrawSignal.h  Drawable.h  EditorSystem.cpp  EditorSystem.h  Engine.h  EngineState.h  EngineType.h  GameLogicSystem.cpp  GameLogicSystem.h  GameObject.cpp  GameObject.h  Graphics.cpp  Graphics.h  InputSignal.cpp  InputSignal.h  InputSystem.h  InputType.h  MainEngine.cpp  MainEngine.h  Manifold.cpp  Manifold.h  (+78 more)
SmashEngine/Debug/: vc120.idb
SmashEngine/Debug/SmashEngine.tlog/: CL.read.1.tlog  CL.write.1.tlog  SmashEngine.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SmashEngine/resources/models/: Cube.model  sphere.model
SmashEngine/resources/objects/: camera.xml  cube.xml  sphere.xml  test.xml  wireframe.xml
SmashEngine/resources/shaders/: model.frag  model.vert  normal.frag  normal.vert  shape.frag  shape.vert
